--- a/index.html
+++ b/index.html
@@ -1,78 +1,138 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-<title>Derrick Jones: UX & UI Designer</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<link rel="stylesheet" href="css/main.css" media="screen">
-
-<style>
-@import url('https://fonts.googleapis.com/css?family=Raleway');</style>
-</style>
+  <title>Derrick Jones: UX & UI Designer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/main.css" media="screen">
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Raleway');
+  </style>
 
 </head>
-<div id="wrapper">
+
 <body>
 
+  <nav>
+    <div class="menu-toggle">
+      <input type="checkbox" />
+      <span></span>
+      <span></span>
+      <span></span>
+      <ul>
+        <a href="#">
+          <li>HOME</li>
+        </a>
+        <a href="#">
+          <li>PROJECTS
+            <!-- <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li> -->
+          </li>
+        </a>
+        <!-- </ul> -->
+        <a href="#">
+          <li>ABOUT</li>
+        </a>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <main>
+      <section class="top">
+        <div class="banner">
+          <img src="images/DJ-logo1-color.png" alt="home-logo">
+        </div>
+        <div class="whom">
+          <ul>
+            <li>Derrick Jones</li>
+            <li>Front End Developer</li>
+            <li>UX/UI Designer</li>
+            <li>Internet Wizard</li>
+          </ul>
+        </div>
+        <span>
+          <a href="#">My Work</a>
+          <a href="#">What I'm About</a>
+        </span>
+      </section>
 
-<nav id="navbar">
-<div class="navbar-left">
-  <a href="index.html"><img src="images/DJ-logo1-color.png" width="60px" height="60px"></a>
-</div>
-<div class="navbar-center">
-  <a href="projects/projects.html">Projects</a>
-</div>
-<div class="navbar-right">
-  <a href="about/about.html">About</a>
-</div>
+      <div class="parallax">
+        <p class="projects-link">PROJECTS</p>
+      </div>
+      <section class="projects">
+        <div class="case-study" "projects-link">
+          <img src="images/ishrslogo2.jpg" alt="international-society-of-hair-restoration-surgeons-website">
+          <h2>Int'l Society of Hair Restoration Surgeons</h2>
+          <h3>UX/UI Design,<br>Web Development</h3>
+          <a href="../ishrs/ishrs.html">View Project</a>
+        </div>
 
-</nav>
+        <div class="case-study">
+          <img src="images/beesbox-logo-5.png" alt="mybeesbox-ecommerce-website">
+          <h2>My Beesbox Gift Service</h2>
+          <h3>UX/UI Design,<br>Web Development</h3>
+          <a href="../ishrs/ishrs.html">View Project</a>
+        </div>
 
-<main>
+        <div class="case-study">
+          <img src="images/sushi-mockup.png" alt="sushi-mockup-ui">
+          <h2>Mobile App Landing Page UI</h2>
+          <h3>UI Design,<br> Adobe XD</h3>
+          <a href="../ishrs/ishrs.html">View Project</a>
+        </div>
 
-<!--INTRODUCTORY BANNER-->
-<div class="parallaxBanner"></div>
+        <div class="case-study">
+          <img src="images/miyazaki-home.png" alt="hayao-miyazaki-museum">
+          <h2>Miyazaki Museum Project</h2>
+          <h3>UI Design, <br>Adobe XD</h3>
+          <a href="../ishrs/ishrs.html">View Project</a>
+        </div>
 
-<section id="banner">
-<div id="intro" >
-<p>
-  <span class="big">I'm Derrick Jones, Front End Web Developer with a UX focus.</span>
-  <br>
-  <br>
-  <br>
-  <span class="small">Design goes beyond appearances and tech, and I can do some things that'll interest you. Take a look and take your time.</span>
+        <div class="case-study">
+          <img src="images/uncommonitems-logo-alt.png" alt="uncommon-items-project">
+          <h2>Uncommon Items Project</h2>
+          <h3>UX/UI Design,<br>Web Development</h3>
+          <a href="../ishrs/ishrs.html">View Project</a>
+        </div>
 
-</p>
+        <div class="case-study">
+          <img src="images/mars-logo.png" alt="graphics-and-animations">
+          <h2>Graphics and Animations</h2>
+          <h3>Graphic Design,<br>JS Animation</h3>
+          <a href="../ishrs/ishrs.html">View Project</a>
+        </div>
+      </section>
 
-<div class="gridProjects">
-<div class="questionLeft">
-    <button><a href="projects/projects.html">What I've Got</a></button>
-</div>
+      <div class="parallax"><p>ABOUT</p></div>
+      <section class="about">
+        <img src="images/new-profile.jpg" alt="art4">
+        <p>Empathy, technology, and stroytelling are tools I use to manifest a vision into reality. Reaching
+           business goals and planning for the future are as important as understanding my clients, teammates, and others.
+          <br>
+          <br>
+           If I'm not at a computer designing, coding, or editing music, you can find me on a bike, sparring,
+           or on my way to somewhere I haven't been.
+          <br>
+          <br>
+          Give me a phone call or send a text: <a href="tel:1-262-930-8960">1-262-930-8960</a>
+          Shoot me an email: <a href="mailto:derrick.j.d.jones@gmail.com"> derrick.j.d.jones@gmail.com</a>
+        </p>
+      </section>
+    </main>
+  </div>
+  <footer>
+    <p>©Derrick Jones 2020</p>
+    <p>Phone: <a href="tel:1-262-930-8960">1-262-930-8960</a></p>
+    <p>Email: <a href="derrick.j.d.jones@gmail.com">derrick.j.d.jones@gmail.com</a></p>
 
-<div class="questionRight">
 
-    <button><a href="about/about.html">What I'm About</a></button>
-</div>
-</div>
-</div>
-
-</section>
-<!--END BANNER-->
-
-</main>
-
+    <div></div>
+  </footer>
 </body>
 
-</div>
 </html>
-
-<!--JSCRIPT-->
-<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-<script src='jquery.transit.js'></script>
-<script>
-$(document).ready(function(){
-
-  });
-});
-</script>
-<!--END JSCRIPT-->
